REF: findDTOById 메서드 리펙토링